version/0.20/_sources/api/solver/_autosummary/settings/critical_pressure.rst.txt
:orphan:

.. _critical_pressure:

critical_pressure
=================

.. autoclass:: ansys.fluent.core.solver.settings_241.critical_pressure.critical_pressure
    :show-inheritance:

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_7>`       Select method for calculating material property.

:ref:`value <value_3>`                     Specify the constant property value.

========================   ====================================================

.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`fluid_child <fluid_child>`             'child_object_type' of fluid.

:ref:`mixture_child <mixture_child>`       'child_object_type' of mixture.

====================================   ===================================

